Create new docker-compose for local building and testing

--- a/docker-compose-e2e.-test.yml
+++ b/docker-compose-e2e.-test.yml
@@ -1,7 +1,7 @@
 services:
   api:
-    image: ewanf2/flask-app
-    #build: . #testing on local pc
+
+    build: . #local testing
     container_name: flask-app
     ports:
       - "5050:80"
