--- a/docker-compose-E2E-test.yml
+++ b/docker-compose-E2E-test.yml
@@ -1,8 +1,7 @@
 services:
-  api:
-
+  data-gen:
     build: . #local testing
-    container_name: flask-app
+    container_name: data-gen
     ports:
       - "5050:80"
     volumes:
