--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,8 @@
 services:
-  api:
+  data-gen:
     image: ewanf2/flask-app
     #build: . #testing on local pc
-    container_name: flask-app
+    container_name: data-gen
     ports:
       - "5050:80"
     volumes:
