--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -27,3 +27,19 @@ jobs:
           
       - name: Run unit tests
         run: pytest unittests/tests.py
+
+
+  static_analysis:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: SonarSource/sonarcloud-github-action@v2.1.0
+        name: Static analysis with sonar cloud
+
+        env:
+          GITHUB_TOKEN: ${{ secrets.TOKEN }}
+          SONAR_TOKEN: ${{ secrets.SONARCLOUD_ACCESS}}
+        with:
+          args: >
+            -Dsonar.projectKey=flaskproj
+            -Dsonar.organization=ewanf
