add sonarcloud analysis into actions file,change some stuff

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -39,7 +39,7 @@ jobs:
 
         with:
           args: >
-            -Dsonar.projectKey=flaskproj
+            -Dsonar.projectKey=ewanf_flaskproj
             -Dsonar.organization=ewanf
         env:
           GITHUB_TOKEN: ${{ secrets.TOKEN }}
