--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -29,6 +29,7 @@ jobs:
           path: coverage.xml
 
   static_analysis:
+    needs: unit_test
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
