--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -20,7 +20,7 @@ jobs:
           pip install -r requirements.txt
           
       - name: Run unit tests
-        run: pytest unittests/tests.py
+        run: pytest --cov=dfunctions --cov-report=xml:coverage.xml unittests/tests.py
 
       - name: Save coverage
         uses: actions/upload-artifact@v4
