--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install -r requirements.txt requirements-test.txt
           
       - name: Run unit tests
         run: pytest --cov=functions --cov-report=xml:coverage.xml unittests/tests.py
@@ -65,13 +65,16 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install -r requirements-test.txt
 
       - name: Run flask-app
-        run: flask run
+        run: docker-compose up -d --build
 
       - name: Run api tests
         run: pytest ./api_tests/api_tests.py
+
+      - name: Tear down container
+        run: docker-compose down -v
 
 
 
