add sonarcloud analysis to summary

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -55,7 +55,7 @@ jobs:
       - name: Add SonarCloud link to summary
         run: |
           echo "### SonarCloud Analysis" >> $GITHUB_STEP_SUMMARY
-          echo "View full report: https://sonarcloud.io/dashboard?id=your-project-key" >> $GITHUB_STEP_SUMMARY
+          echo "View full report: https://sonarcloud.io/dashboard?id=flaskproj" >> $GITHUB_STEP_SUMMARY
 
   Integration_tests:
     runs-on: ubuntu-latest
