--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -81,6 +81,7 @@ jobs:
           SONAR_TOKEN: ${{ secrets.SONARCLOUD_ACCESS }}
 
   Integration_tests:
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
