--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -77,6 +77,7 @@ jobs:
             -Dsonar.organization=ewanf
             -Dsonar.coverage.exclusions=unittests/**,api_tests/**,App.py
             -Dsonar.sources=.
+            -Dsonar.qualitygate.wait=tr
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONARCLOUD_ACCESS }}
