hopefully fixing workflow

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -76,7 +76,7 @@ jobs:
             -Dsonar.projectKey=flaskproj
             -Dsonar.organization=ewanf
             -Dsonar.coverage.exclusions=unittests/**,api_tests/**,App.py
-            -Dsonar.sources=../../App.py,../../functions.py
+            -Dsonar.sources=~/Data_generator
             -Dsonar.qualitygate.wait=tr
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
