--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -82,7 +82,7 @@ jobs:
             -Dsonar.projectKey=flaskproj
             -Dsonar.organization=ewanf
             -Dsonar.coverage.exclusions=unittests/**,api_tests/**,App.py
-            -Dsonar.sources=~/Data_generator
+            -Dsonar.sources=/home/runner/work/Data_generator/Data_generator
             -Dsonar.qualitygate.wait=tr
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
