--- a/.github/workflows/PR.yml
+++ b/.github/workflows/PR.yml
@@ -93,7 +93,7 @@ jobs:
           pip install -r requirements-test.txt
 
       - name: Run flask-app
-        run: docker compose up -d --build
+        run: docker compose -f docker-compose-test.yml up -d --build
 
       - name: Wait for app to be ready
         run: sleep 5
