--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -35,7 +35,18 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.x'
 
+      - name: Install dependencies
+        run: |
+          pip install pytest pytest-cov
+          pip install -r requirements.txt
+
+      - name: Run tests with coverage
+        run: pytest --cov=. --cov-report=xml:coverage.xml unittests/ -v
       - uses: SonarSource/sonarcloud-github-action@v2.1.0
         name: Static analysis (with coverage)
         with:
@@ -43,6 +54,7 @@ jobs:
             -Dsonar.projectKey=flaskproj
             -Dsonar.organization=ewanf
             -Dsonar.coverage.exclusions=unittests/**,api_tests/**,App.py
+            -Dsonar.python.coverage.reportPaths=coverage.xml
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONARCLOUD_ACCESS }}
